# Sound_split_ADSR

./: # Copyright and Use Notice.md  .gitignore  CONTRIBUTING.md  QUICK_GUIDE.md  README.md  audio_segment_core.py  pyproject.toml  requirements.txt  run.bat  run_benchmark.py  split_audio_cli.py  split_audio_segments.py
.github/workflows/: ci.yml
benchmark/: __init__.py  benchmark_core.py  generate_corpus.py
benchmark/corpus/: README.md  annotations.json
docs/: COPYRIGHT.md  TECHNICAL_MANUAL.md
installers/: README.md
installers/common/: bootstrap.py  config.py
installers/linux/: install-and-run.sh  setup-runtime.sh
installers/macos/: Install and Run.command  setup-runtime.sh
installers/windows/: INSTALL.bat  Install and Run.bat  Install-Easy.ps1  README.md  config.ps1
installers/windows/lib/: InstallerHelpers.ps1
tests/: test_advanced_features.py  test_benchmark.py  test_segment_detection.py
